# CoCIS

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  cocisdb_vuoto.sql  domanda.txt  pyproject.toml
.cc-history/: 2026-07-10_114234_command-messagecosciencecommand-mess_72dad8ad.md
.claude/: settings.json
alembic/: env.py
alembic/versions/: d8c87d4e55d9_create_pazienti_contatti_pz_ricoveri.py
app/: main.py
app/models/: __init__.py  asp.py  categoria_paziente.py  comune.py  contatto_pz.py  diagnosi.py  dipendente.py  disciplina.py  disdetta_prenotazione.py  grado_urgenza.py  gruppo_sanguigno.py  livello_istruzione.py  medico.py  medico_esterno.py  modalita_accesso.py  paziente.py  posizione_professionale.py  prenotazione.py  prericovero.py  presidio_osp.py  professione.py  provenienza.py  rapporto_dipendenza.py  regione.py  reparto.py  ricovero.py  stato.py  stato_civile.py  tipo_dipendente.py  tipo_documento.py  titolo.py
app/schemas/: asp.py  categoria_paziente.py  comune.py  contatto_pz.py  diagnosi.py  dipendente.py  disciplina.py  disdetta_prenotazione.py  grado_urgenza.py  gruppo_sanguigno.py  livello_istruzione.py  medico.py  medico_esterno.py  modalita_accesso.py  paziente.py  posizione_professionale.py  prenotazione.py  prericovero.py  presidio_osp.py  (+11 more)
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
tests/: conftest.py  test_pazienti.py  test_percorso_ricovero.py  test_prenotazioni.py  test_reparti_medici.py  test_ricoveri.py
(+5 files in other folders)
